--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="container">
+      <div class="container main-nav">
         <!-- Главная навигация -->
         <nav>
           <a href="./index.html" class="logo-webstudio">
@@ -26,17 +26,27 @@
 
           <!-- Ссылки на другие страницы или разделы текущей страницы-->
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link active">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li class="item">
+              <a href="./index.html" class="link active">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item">
+              <a href="" class="link">Контакты</a>
+            </li>
           </ul>
         </nav>
 
         <!--Контакты-->
         <address>
           <ul class="contacts-header list">
-            <li><a href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+            <li class="item">
+              <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111"> +38 096 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
@@ -57,33 +67,52 @@
         <div class="container">
           <h2 class="portfolio-home">Нашы личные качества</h2>
           <ul class="personal-qualities list">
-            <li>
-              <img src="./images/Group.svg" alt="картинка" width="70" />
+            <li class="item">
+              <img
+                src="./images/Group.svg"
+                alt="картинка"
+                width="270"
+                height="120"
+              />
               <h3 class="qualities">Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
-              <img src="./images/clock1.svg" alt="картинка" width="70" />
+            <li class="item">
+              <img
+                src="./images/clock1.svg"
+                alt="картинка"
+                width="270"
+                height="120"
+              />
               <h3 class="qualities">Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
-              <img src="./images/Vector.svg" alt="картинка" width="70" />
+            <li class="item">
+              <img
+                src="./images/Vector.svg"
+                alt="картинка"
+                width="270"
+                height="120"
+              />
               <h3 class="qualities">Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
-              <img src="./images/astronaut1.svg" alt="картинка" width="70" />↩
-
+            <li class="item">
+              <img
+                src="./images/astronaut1.svg"
+                alt="картинка"
+                width="270"
+                height="120"
+              />
               <h3 class="qualities">Современные технологии</h3>
               <p>
                 Значимость этих проблем настолько очевидна, что реализация
@@ -100,17 +129,17 @@
           <h2 class="work-title">Чем мы занимаемся</h2>
 
           <ul class="work-list list">
-            <li>
+            <li class="item">
               <img src="./images/img.jpg" alt="картинка" width="370" />
               <h3 class="work">Десктопные приложения</h3>
             </li>
 
-            <li>
+            <li class="item">
               <img src="./images/box.jpg" alt="картинка" width="370" />
               <h3>Мобильные приложения</h3>
             </li>
 
-            <li>
+            <li class="item">
               <img src="./images/img2.jpg" alt="картинка" width="370" />
               <h3>Дизайнерские решения</h3>
             </li>
@@ -124,7 +153,7 @@
           <h2 class="ourtaem-title">Наша команда</h2>
 
           <ul class="ourteam list">
-            <li class="">
+            <li class="item">
               <img src="./images/img-1.jpg" alt="фото_сотрудника" />
               <div class="team">
                 <h3 lang="en">John Smith</h3>
@@ -132,8 +161,8 @@
 
                 <!--Social links-->
 
-                <ul class="list">
-                  <li>
+                <ul class="social-links list">
+                  <li class="items">
                     <a href="https://www.instagram.com"
                       ><img
                         src="./images/Instagram_1.svg"
@@ -142,7 +171,7 @@
                       />
                     </a>
                   </li>
-                  <li>
+                  <li class="items">
                     <a href="https://twitter.com/"
                       ><img
                         src="./images/Twitter_1.svg"
@@ -151,7 +180,7 @@
                       />
                     </a>
                   </li>
-                  <li>
+                  <li class="items">
                     <a href="https://www.facebook.com/"
                       ><img
                         src="./images/Facebook_1.svg"
@@ -160,7 +189,7 @@
                       />
                     </a>
                   </li>
-                  <li>
+                  <li class="items">
                     <a href="https://www.linkedin.com/"
                       ><img
                         src="./images/Linkedin_1.svg"
@@ -173,7 +202,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="item">
               <img src="./images/img-2.jpg" alt="фото_сотрудника" />
               <div class="team">
                 <h3 lang="en">Marta Stewart</h3>
@@ -181,8 +210,8 @@
 
                 <!--Social links-->
 
-                <ul class="list">
-                  <li>
+                <ul class="social-links list">
+                  <li class="items">
                     <a href="https://www.instagram.com"
                       ><img
                         src="./images/Instagram_1.svg"
@@ -191,7 +220,7 @@
                       />
                     </a>
                   </li>
-                  <li>
+                  <li class="items">
                     <a href="https://twitter.com/"
                       ><img
                         src="./images/Twitter_1.svg"
@@ -200,7 +229,7 @@
                       />
                     </a>
                   </li>
-                  <li>
+                  <li class="items">
                     <a href="https://www.facebook.com/"
                       ><img
                         src="./images/Facebook_1.svg"
@@ -209,7 +238,7 @@
                       />
                     </a>
                   </li>
-                  <li>
+                  <li class="items">
                     <a href="https://www.linkedin.com/"
                       ><img
                         src="./images/Linkedin_1.svg"
@@ -222,7 +251,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="item">
               <img src="./images/img-3.jpg" alt="фото_сотрудника" />
               <div class="team">
                 <h3 lang="en">Robert Jakis</h3>
@@ -230,8 +259,8 @@
 
                 <!--Social links-->
 
-                <ul class="list">
-                  <li>
+                <ul class="social-links list">
+                  <li class="items">
                     <a href="https://www.instagram.com"
                       ><img
                         src="./images/Instagram_1.svg"
@@ -240,7 +269,7 @@
                       />
                     </a>
                   </li>
-                  <li>
+                  <li class="items">
                     <a href="https://twitter.com/"
                       ><img
                         src="./images/Twitter_1.svg"
@@ -249,7 +278,7 @@
                       />
                     </a>
                   </li>
-                  <li>
+                  <li class="items">
                     <a href="https://www.facebook.com/"
                       ><img
                         src="./images/Facebook_1.svg"
@@ -258,7 +287,7 @@
                       />
                     </a>
                   </li>
-                  <li>
+                  <li class="items">
                     <a href="https://www.linkedin.com/"
                       ><img
                         src="./images/Linkedin_1.svg"
@@ -271,7 +300,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="item">
               <img src="./images/img-4.jpg" alt="фото_сотрудника" />
               <div class="team">
                 <h3 lang="en">Martin Doe</h3>
@@ -279,8 +308,8 @@
 
                 <!--Social links-->
 
-                <ul class="list">
-                  <li>
+                <ul class="social-links list">
+                  <li class="items">
                     <a href="https://www.instagram.com"
                       ><img
                         src="./images/Instagram_1.svg"
@@ -289,7 +318,7 @@
                       />
                     </a>
                   </li>
-                  <li>
+                  <li class="items">
                     <a href="https://twitter.com/"
                       ><img
                         src="./images/Twitter_1.svg"
@@ -298,7 +327,7 @@
                       />
                     </a>
                   </li>
-                  <li>
+                  <li class="items">
                     <a href="https://www.facebook.com/"
                       ><img
                         src="./images/Facebook_1.svg"
@@ -307,7 +336,7 @@
                       />
                     </a>
                   </li>
-                  <li>
+                  <li class="items">
                     <a href="https://www.linkedin.com/"
                       ><img
                         src="./images/Linkedin_1.svg"
@@ -328,7 +357,7 @@
         <div class="container">
           <h2 class="customers-title">Постоянные клиенты</h2>
           <ul class="customers-link list">
-            <li>
+            <li class="item">
               <a href=""
                 ><img
                   src="./images/client/Client1.svg"
@@ -337,7 +366,7 @@
                 />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img
                   src="./images/client/Client2.svg"
@@ -346,7 +375,7 @@
                 />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img
                   src="./images/client/Client3.svg"
@@ -355,7 +384,7 @@
                 />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img
                   src="./images/client/Client4.svg"
@@ -364,7 +393,7 @@
                 />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img
                   src="./images/client/Client5.svg"
@@ -373,7 +402,7 @@
                 />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img
                   src="./images/client/Client6.svg"
@@ -390,55 +419,65 @@
     <!-- Подвал страницы -->
     <footer class="footer">
       <div class="container">
-        <div class="contacts-box">
-          <a href="./index.html" class="logo-footer">
-            <span class="web-footer">Web</span>
-            <span class="studio-footer">Studio</span>
-          </a>
+        <div class="footer-flex">
+          <div class="contacts-box">
+            <a href="./index.html" class="logo-footer">
+              <span class="web-footer">Web</span>
+              <span class="studio-footer">Studio</span>
+            </a>
 
-          <!--Список контактов-->
-          <address>
-            <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
-            <ul class="contacts-footer list">
-              <li><a href="mailto:info@example.com">info@example.com</a></li>
-              <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <!--Список контактов-->
+            <address>
+              <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
+              <ul class="contacts-footer list">
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+              </ul>
+            </address>
+          </div>
+
+          <!--Список соцсетей-->
+          <div class="invitation-container">
+            <p class="invitation"><b>Присоединяйтесь</b></p>
+            <ul class="socialinks-box list">
+              <li class="item">
+                <a href="https://www.instagram.com"
+                  ><img
+                    src="./images/Instagram_1.svg"
+                    alt="инстаграм"
+                    width="44"
+                  />
+                </a>
+              </li>
+              <li class="item">
+                <a href="https://twitter.com/"
+                  ><img src="./images/Twitter_1.svg" alt="твиттер" width="44" />
+                </a>
+              </li>
+              <li class="item">
+                <a href="https://www.facebook.com/"
+                  ><img
+                    src="./images/Facebook_1.svg"
+                    alt="фейсбук"
+                    width="44"
+                  />
+                </a>
+              </li>
+              <li class="item">
+                <a href="https://www.linkedin.com/"
+                  ><img
+                    src="./images/Linkedin_1.svg"
+                    alt="линкедин"
+                    width="44"
+                  />
+                </a>
+              </li>
             </ul>
-          </address>
+          </div>
         </div>
-
-        <!--Список соцсетей-->
-        <div class="socialink-box">
-          <p class="invitation"><b>Присоединяйтесь</b></p>
-          <ul>
-            <li>
-              <a href="https://www.instagram.com"
-                ><img
-                  src="./images/Instagram_1.svg"
-                  alt="инстаграм"
-                  width="44"
-                />
-              </a>
-            </li>
-            <li>
-              <a href="https://twitter.com/"
-                ><img src="./images/Twitter_1.svg" alt="твиттер" width="44" />
-              </a>
-            </li>
-            <li>
-              <a href="https://www.facebook.com/"
-                ><img src="./images/Facebook_1.svg" alt="фейсбук" width="44" />
-              </a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/"
-                ><img src="./images/Linkedin_1.svg" alt="линкедин" width="44" />
-              </a>
-            </li>
-          </ul>
-        </div>
+        <hr />
+        <p class="developers">2020 | Developed by GoIT Students</p>
       </div>
-      <hr />
-      <p class="developers">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
