--- a/portfolio.html
+++ b/portfolio.html
@@ -16,205 +16,248 @@
   </head>
 
   <body>
-    <header>
-      <!-- Главная навигация -->
-      <nav>
-        <a href="./index.html" class="logo-webstudio">
-          <span class="web">Web</span>
-          <span class="studio">Studio</span>
-        </a>
+    <header class="page-header">
+      <div class="container main-nav">
+        <!-- Главная навигация -->
+        <nav>
+          <a href="./index.html" class="logo-webstudio">
+            <span class="web">Web</span>
+            <span class="studio">Studio</span>
+          </a>
 
-        <!-- Ссылки на другие страницы или разделы текущей страницы-->
-        <ul class="site-nav list">
-          <li class="list-nav">
-            <a href="./index.html" class="link">Студия</a>
-          </li>
-          <li class="list-nav">
-            <a href="./portfolio.html" class="link active">Портфолио</a>
-          </li>
-          <li class="list-nav"><a href="" class="link">Контакты</a></li>
-        </ul>
-      </nav>
+          <!-- Ссылки на другие страницы или разделы текущей страницы-->
+          <ul class="site-nav list">
+            <li class="item">
+              <a href="./index.html" class="link">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link active">Портфолио</a>
+            </li>
+            <li class="item">
+              <a href="" class="link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
 
-      <!--Контакты-->
-      <address>
-        <ul class="contacts-header list">
-          <li><a href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
-        </ul>
-      </address>
+        <!--Контакты-->
+        <address>
+          <ul class="contacts-header list">
+            <li class="item">
+              <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111"> +38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!--Section-1-->
-      <section>
-        <h1 class="portfolio-home">Портфолио студии</h1>
-        <ul class="list">
-          <button type="button" class="input">Все</button>
-          <button type="button" class="input">Веб-сайты</button>
-          <button type="button" class="input">Приложения</button>
-          <button type="button" class="input">Дизайн</button>
-          <button type="button" class="input">Маркетинг</button>
-        </ul>
+      <section class="filter-container">
+        <div class="container">
+          <h1 class="portfolio-home">Портфолио студии</h1>
+          <ul class="filter-flex list">
+            <li class="item">
+              <button type="button" class="input">Все</button>
+            </li>
+            <li class="item">
+              <button type="button" class="input">Приложения</button>
+            </li>
+            <li class="item">
+              <button type="button" class="input">Дизайн</button>
+            </li>
+            <li class="item">
+              <button type="button" class="input">Маркетинг</button>
+            </li>
+            <li class="item">
+              <button type="button" class="input">Веб-сайты</button>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Section-2-->
-      <section>
-        <ul class="list">
-          <li>
-            <a href="" class="portfolio">
-              <img
-                src="./images/portfolio/img.jpg"
-                alt="картинка"
-                width="370"
-              />
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="portfolio-description">Веб-сайт</p>
-            </a>
-          </li>
+      <section class="main-section">
+        <div class="container">
+          <ul class="portfolio-box list">
+            <li class="elements">
+              <a href="" class="portfolio">
+                <img
+                  src="./images/portfolio/img.jpg"
+                  alt="картинка"
+                  width="380"
+                />
+                <h2 class="portfolio-title">Технокряк</h2>
+                <p class="portfolio-description">Веб-сайт</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="portfolio">
-              <img
-                src="./images/portfolio/img2.jpg"
-                alt="картинка"
-                width="370"
-              />
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-description">Дизайн</p>
-            </a>
-          </li>
+            <li class="elements">
+              <a href="" class="portfolio">
+                <img
+                  src="./images/portfolio/img2.jpg"
+                  alt="картинка"
+                  width="380"
+                />
+                <h2 class="portfolio-title">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p class="portfolio-description">Дизайн</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="portfolio">
-              <img
-                src="./images/portfolio/img3.jpg"
-                alt="картинка"
-                width="370"
-              />
-              <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class="portfolio-description">Приложение</p>
-            </a>
-          </li>
+            <li class="elements">
+              <a href="" class="portfolio">
+                <img
+                  src="./images/portfolio/img3.jpg"
+                  alt="картинка"
+                  width="380"
+                />
+                <h2 class="portfolio-title">Ресторан Seafood</h2>
+                <p class="portfolio-description">Приложение</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="portfolio">
-              <img
-                src="./images/portfolio/img4.jpg"
-                alt="картинка"
-                width="370"
-              />
-              <h2 class="portfolio-title">Проект Prime</h2>
-              <p class="portfolio-description">Маркетинг</p>
-            </a>
-          </li>
+            <li class="elements">
+              <a href="" class="portfolio">
+                <img
+                  src="./images/portfolio/img4.jpg"
+                  alt="картинка"
+                  width="380"
+                />
+                <h2 class="portfolio-title">Проект Prime</h2>
+                <p class="portfolio-description">Маркетинг</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="portfolio">
-              <img
-                src="./images/portfolio/img5.jpg"
-                alt="картинка"
-                width="370"
-              />
-              <h2 class="portfolio-title">Проект Boxes</h2>
-              <p class="portfolio-description">Приложение</p>
-            </a>
-          </li>
+            <li class="elements">
+              <a href="" class="portfolio">
+                <img
+                  src="./images/portfolio/img5.jpg"
+                  alt="картинка"
+                  width="380"
+                />
+                <h2 class="portfolio-title">Проект Boxes</h2>
+                <p class="portfolio-description">Приложение</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="portfolio">
-              <img
-                src="./images/portfolio/img6.jpg"
-                alt="картинка"
-                width="370"
-              />
-              <h2 class="portfolio-title">Inspiration has no Borders</h2>
-              <p class="portfolio-description">Веб-сайт</p>
-            </a>
-          </li>
+            <li class="elements">
+              <a href="" class="portfolio">
+                <img
+                  src="./images/portfolio/img6.jpg"
+                  alt="картинка"
+                  width="380"
+                />
+                <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                <p class="portfolio-description">Веб-сайт</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="portfolio">
-              <img
-                src="./images/portfolio/img7.jpg"
-                alt="картинка"
-                width="370"
-              />
-              <h2 class="portfolio-title">Издание Limited Edition</h2>
-              <p class="portfolio-description">Дизайн</p>
-            </a>
-          </li>
+            <li class="elements">
+              <a href="" class="portfolio">
+                <img
+                  src="./images/portfolio/img7.jpg"
+                  alt="картинка"
+                  width="380"
+                />
+                <h2 class="portfolio-title">Издание Limited Edition</h2>
+                <p class="portfolio-description">Дизайн</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="portfolio">
-              <img
-                src="./images/portfolio/img8.jpg"
-                alt="картинка"
-                width="370"
-              />
-              <h2 class="portfolio-title">Проект LAB</h2>
-              <p class="portfolio-description">Маркетинг</p>
-            </a>
-          </li>
+            <li class="elements">
+              <a href="" class="portfolio">
+                <img
+                  src="./images/portfolio/img8.jpg"
+                  alt="картинка"
+                  width="380"
+                />
+                <h2 class="portfolio-title">Проект LAB</h2>
+                <p class="portfolio-description">Маркетинг</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="portfolio">
-              <img
-                src="./images/portfolio/img9.jpg"
-                alt="картинка"
-                width="370"
-              />
-              <h2 class="portfolio-title">Growing Business</h2>
-              <p class="portfolio-description">Приложение</p></a
-            >
-          </li>
-        </ul>
+            <li class="elements">
+              <a href="" class="portfolio">
+                <img
+                  src="./images/portfolio/img9.jpg"
+                  alt="картинка"
+                  width="380"
+                />
+                <h2 class="portfolio-title">Growing Business</h2>
+                <p class="portfolio-description">Приложение</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Подвал страницы -->
-    <footer>
-      <a href="./index.html" class="logo-footer">
-        <span class="web-footer">Web</span>
-        <span class="studio-footer">Studio</span>
-      </a>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-flex">
+          <div class="contacts-box">
+            <a href="./index.html" class="logo-footer">
+              <span class="web-footer">Web</span>
+              <span class="studio-footer">Studio</span>
+            </a>
 
-      <!--Список контактов-->
+            <!--Список контактов-->
+            <address>
+              <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
+              <ul class="contacts-footer list">
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+              </ul>
+            </address>
+          </div>
 
-      <address>
-        <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
-        <ul class="contacts-footer list">
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
-
-      <!--Список соцсетей-->
-      <p class="invitation"><b>Присоединяйтесь</b></p>
-      <ul>
-        <li>
-          <a href=" https://www.instagram.com"
-            ><img src="./images/Instagram_1.svg" alt="инстаграм" width="44" />
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/"
-            ><img src="./images/Twitter_1.svg" alt="твиттер" width="44" />
-          </a>
-        </li>
-        <li>
-          <a href="https://www.facebook.com/"
-            ><img src="./images/Facebook_1.svg" alt="фейсбук" width="44" />
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/"
-            ><img src="./images/Linkedin_1.svg" alt="линкедин" width="44" />
-          </a>
-        </li>
-      </ul>
-      <hr />
-      <p class="developers">2020 | Developed by GoIT Students</p>
+          <!--Список соцсетей-->
+          <div class="invitation-container">
+            <p class="invitation"><b>Присоединяйтесь</b></p>
+            <ul class="socialinks-box list">
+              <li class="item">
+                <a href="https://www.instagram.com"
+                  ><img
+                    src="./images/Instagram_1.svg"
+                    alt="инстаграм"
+                    width="44"
+                  />
+                </a>
+              </li>
+              <li class="item">
+                <a href="https://twitter.com/"
+                  ><img src="./images/Twitter_1.svg" alt="твиттер" width="44" />
+                </a>
+              </li>
+              <li class="item">
+                <a href="https://www.facebook.com/"
+                  ><img
+                    src="./images/Facebook_1.svg"
+                    alt="фейсбук"
+                    width="44"
+                  />
+                </a>
+              </li>
+              <li class="item">
+                <a href="https://www.linkedin.com/"
+                  ><img
+                    src="./images/Linkedin_1.svg"
+                    alt="линкедин"
+                    width="44"
+                  />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <hr />
+        <p class="developers">2020 | Developed by GoIT Students</p>
+      </div>
     </footer>
   </body>
 </html>
