--- a/portfolio.html
+++ b/portfolio.html
@@ -89,8 +89,10 @@
                   alt="картинка"
                   width="380"
                 />
-                <h2 class="portfolio-title">Технокряк</h2>
-                <p class="portfolio-description">Веб-сайт</p>
+                <div class="text-content">
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="portfolio-description">Веб-сайт</p>
+                </div>
               </a>
             </li>
 
@@ -101,10 +103,12 @@
                   alt="картинка"
                   width="380"
                 />
-                <h2 class="portfolio-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="portfolio-description">Дизайн</p>
+                <div class="text-content">
+                  <h2 class="portfolio-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfolio-description">Дизайн</p>
+                </div>
               </a>
             </li>
 
@@ -115,8 +119,10 @@
                   alt="картинка"
                   width="380"
                 />
-                <h2 class="portfolio-title">Ресторан Seafood</h2>
-                <p class="portfolio-description">Приложение</p>
+                <div class="text-content">
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-description">Приложение</p>
+                </div>
               </a>
             </li>
 
@@ -127,8 +133,10 @@
                   alt="картинка"
                   width="380"
                 />
-                <h2 class="portfolio-title">Проект Prime</h2>
-                <p class="portfolio-description">Маркетинг</p>
+                <div class="text-content">
+                  <h2 class="portfolio-title">Проект Prime</h2>
+                  <p class="portfolio-description">Маркетинг</p>
+                </div>
               </a>
             </li>
 
@@ -139,8 +147,10 @@
                   alt="картинка"
                   width="380"
                 />
-                <h2 class="portfolio-title">Проект Boxes</h2>
-                <p class="portfolio-description">Приложение</p>
+                <div class="text-content">
+                  <h2 class="portfolio-title">Проект Boxes</h2>
+                  <p class="portfolio-description">Приложение</p>
+                </div>
               </a>
             </li>
 
@@ -151,8 +161,10 @@
                   alt="картинка"
                   width="380"
                 />
-                <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                <p class="portfolio-description">Веб-сайт</p>
+                <div class="text-content">
+                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                  <p class="portfolio-description">Веб-сайт</p>
+                </div>
               </a>
             </li>
 
@@ -163,8 +175,10 @@
                   alt="картинка"
                   width="380"
                 />
-                <h2 class="portfolio-title">Издание Limited Edition</h2>
-                <p class="portfolio-description">Дизайн</p>
+                <div class="text-content">
+                  <h2 class="portfolio-title">Издание Limited Edition</h2>
+                  <p class="portfolio-description">Дизайн</p>
+                </div>
               </a>
             </li>
 
@@ -175,8 +189,10 @@
                   alt="картинка"
                   width="380"
                 />
-                <h2 class="portfolio-title">Проект LAB</h2>
-                <p class="portfolio-description">Маркетинг</p>
+                <div class="text-content">
+                  <h2 class="portfolio-title">Проект LAB</h2>
+                  <p class="portfolio-description">Маркетинг</p>
+                </div>
               </a>
             </li>
 
@@ -187,8 +203,10 @@
                   alt="картинка"
                   width="380"
                 />
-                <h2 class="portfolio-title">Growing Business</h2>
-                <p class="portfolio-description">Приложение</p>
+                <div class="text-content">
+                  <h2 class="portfolio-title">Growing Business</h2>
+                  <p class="portfolio-description">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
@@ -210,7 +228,11 @@
             <address>
               <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
               <ul class="contacts-footer list">
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li>
+                  <a class="mail" href="mailto:info@example.com"
+                    >info@example.com</a
+                  >
+                </li>
                 <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
               </ul>
             </address>
@@ -255,7 +277,7 @@
             </ul>
           </div>
         </div>
-        <hr />
+
         <p class="developers">2020 | Developed by GoIT Students</p>
       </div>
     </footer>
