добавляет линию в хедере

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 
         <!--Список соцсетей-->
         <div class="invitation-container">
-          <p class="invitation"><b>Присоединяйтесь</b></p>
+          <b class="invitation">Присоединяйтесь</b>
           <ul class="socialinks-box list">
             <li class="item">
               <a href="https://www.instagram.com"
