--- a/portfolio.html
+++ b/portfolio.html
@@ -216,70 +216,59 @@
 
     <!-- Подвал страницы -->
     <footer class="footer">
-      <div class="container">
-        <div class="footer-flex">
-          <div class="contacts-box">
-            <a href="./index.html" class="logo-footer">
-              <span class="web-footer">Web</span>
-              <span class="studio-footer">Studio</span>
-            </a>
+      <div class="footer-flex container">
+        <div class="contacts-box">
+          <a href="./index.html" class="logo-footer">
+            <span class="web-footer">Web</span>
+            <span class="studio-footer">Studio</span>
+          </a>
 
-            <!--Список контактов-->
-            <address>
-              <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
-              <ul class="contacts-footer list">
-                <li>
-                  <a class="mail" href="mailto:info@example.com"
-                    >info@example.com</a
-                  >
-                </li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-              </ul>
-            </address>
-          </div>
-
-          <!--Список соцсетей-->
-          <div class="invitation-container">
-            <p class="invitation"><b>Присоединяйтесь</b></p>
-            <ul class="socialinks-box list">
-              <li class="item">
-                <a href="https://www.instagram.com"
-                  ><img
-                    src="./images/Instagram_1.svg"
-                    alt="инстаграм"
-                    width="44"
-                  />
-                </a>
+          <!--Список контактов-->
+          <address>
+            <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
+            <ul class="contacts-footer list">
+              <li>
+                <a class="mail" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
               </li>
-              <li class="item">
-                <a href="https://twitter.com/"
-                  ><img src="./images/Twitter_1.svg" alt="твиттер" width="44" />
-                </a>
-              </li>
-              <li class="item">
-                <a href="https://www.facebook.com/"
-                  ><img
-                    src="./images/Facebook_1.svg"
-                    alt="фейсбук"
-                    width="44"
-                  />
-                </a>
-              </li>
-              <li class="item">
-                <a href="https://www.linkedin.com/"
-                  ><img
-                    src="./images/Linkedin_1.svg"
-                    alt="линкедин"
-                    width="44"
-                  />
-                </a>
-              </li>
+              <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
-          </div>
+          </address>
         </div>
 
-        <p class="developers">2020 | Developed by GoIT Students</p>
+        <!--Список соцсетей-->
+        <div class="invitation-container">
+          <b class="invitation">Присоединяйтесь</b>
+          <ul class="socialinks-box list">
+            <li class="item">
+              <a href="https://www.instagram.com"
+                ><img
+                  src="./images/Instagram_1.svg"
+                  alt="инстаграм"
+                  width="44"
+                />
+              </a>
+            </li>
+            <li class="item">
+              <a href="https://twitter.com/"
+                ><img src="./images/Twitter_1.svg" alt="твиттер" width="44" />
+              </a>
+            </li>
+            <li class="item">
+              <a href="https://www.facebook.com/"
+                ><img src="./images/Facebook_1.svg" alt="фейсбук" width="44" />
+              </a>
+            </li>
+            <li class="item">
+              <a href="https://www.linkedin.com/"
+                ><img src="./images/Linkedin_1.svg" alt="линкедин" width="44" />
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
+      <p class="developers container">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
